Fix logo size on mobile dev

--- a/css/style.css
+++ b/css/style.css
@@ -3152,7 +3152,7 @@ header.appsLand-header.custom-shape-1 .app-overlay:after {
     /* border-radius: 50%; */
     /* box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25); */
     height: 80px;
-    width: 220px;
+    /* width: 220px; */
   }
   .appsLand-navbar .app-links .navbar-nav > li > a, .appsLand-navbar .app-links .navbar-nav > li > span {
     color: #333;
